--- a/style.css
+++ b/style.css
@@ -3,21 +3,34 @@ body {
     height: 100vh;
     background-color: black;
     font-family: "Silkscreen", sans-serif;
+    padding: none;
+    margin: none;
     color: white;
     overflow: hidden;
 }
 
-#loading-screen {
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
+h1 {
+    font-size: 10vh;
+    text-shadow: .75vh .75vh rgb(81, 16, 130);
 }
 
-.text {
-    background-color: blue;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+h3 {
+    font-size: 5vh;
+    color: yellow;
+}
+
+#loading-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  padding-top: 40vh;
+}
+
+#loading-screen h1,
+#loading-screen h3 {
+  margin: 0;
+  line-height: 1.25;
 }
