--- a/style.css
+++ b/style.css
@@ -14,9 +14,17 @@ h1 {
     text-shadow: .75vh .75vh rgb(81, 16, 130);
 }
 
-h3 {
+#start-button {
     font-size: 5vh;
+    font-family: "Silkscreen", sans-serif;
+    background-color: red;
+    border: none;
     color: yellow;
+}
+
+.screen {
+  height: 100vh;
+  width: 100vw;
 }
 
 #loading-screen {
@@ -24,8 +32,6 @@ h3 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
   padding-top: 40vh;
 }
 
